# marcup

./: .gitignore  Cargo.toml  Makefile  README.md  RESEARCH.md  input.md  output.json  unify.js
src/: lib.rs
src/asciidoc/: parser.rs
src/ast/: mod.rs
src/ast/location/: mod.rs  position.rs
src/markdown/: parser.rs
src/markdown/snapshots/: marcup__markdown__parser__tests__emphasis.snap  marcup__markdown__parser__tests__emphasis.snap.new  marcup__markdown__parser__tests__fenced_code_block_empty.snap  marcup__markdown__parser__tests__fenced_code_block_empty_content.snap  marcup__markdown__parser__tests__fenced_code_block_literal_content.snap  marcup__markdown__parser__tests__fenced_code_block_with_info.snap  marcup__markdown__parser__tests__header.snap  marcup__markdown__parser__tests__header_italicized.snap  marcup__markdown__parser__tests__indented_code_block_interior_blank_lines.snap  marcup__markdown__parser__tests__indented_code_block_interior_blank_lines.snap.new  marcup__markdown__parser__tests__indented_code_block_trailing_and_preceding_blank_lines.snap  marcup__markdown__parser__tests__indented_code_block_with_indented_line.snap  marcup__markdown__parser__tests__indented_tab_code_block.snap
src/parsers/: errors.rs  mod.rs  span.rs
src/parsers/util/: bytes.rs  convert.rs  line.rs  mod.rs  whitespace.rs
tests/: marcup.rs
