[package]
name = "marcup"
version = "0.1.0"
authors = ["seancarroll"]
description = "Markup parser AST generator"
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.1.0"
pest = "2.1.3"
pest_derive = "2.1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
insta = "1.6.0"
